# webhook-logger

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  test_webhook.py  webhook.py
.github/workflows/: tests.yml
tests/: conftest.py  test_webhook.py
